# kalpas

./: README.md  pyproject.toml  setup.py
kalpas/: __init__.py  config.py  models.py  timecard.py  users.py
migrations/versions/: 12557327cf45_users_and_punch_tables.py
tests/: __init__.py
