[tool.poetry]
name = "kalpas"
version = "0.1.0"
description = "Simple time tracking"
authors = ["Dennis Lee"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
